# DepTrace-

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  out.sarif  pyproject.toml
.github/workflows/: ci.yml
evals/: dataset.jsonl  run_eval.py
evals/fixtures/aliased_import/: app.py
evals/fixtures/broken_syntax/: app.py  good.py
evals/fixtures/conditional_import/: app.py
evals/fixtures/direct_call/: app.py
evals/fixtures/dynamic_import/: app.py
evals/fixtures/from_import/: app.py
evals/fixtures/multi_package/: app.py  requirements.txt
evals/fixtures/nested_attr/: app.py
evals/fixtures/not_reachable/: app.py
evals/fixtures/prefix_decoy/: app.py
evals/fixtures/relative_import/pkg/: app.py  helpers.py
evals/fixtures/shadowed_name/: app.py
src/deptrace/: __init__.py  cli.py  report.py  verify.py
src/deptrace/core/: orchestrator.py  state.py
src/deptrace/providers/llm/: base.py  extractor.py
src/deptrace/providers/store/: base.py  sqlite.py
src/deptrace/providers/vulndb/: base.py  osv.py  ranges.py
src/deptrace/tools/: manifest.py  names.py  reachability.py
tests/: conftest.py  test_cli.py  test_eval_harness.py  test_llm_extractor.py  test_manifest.py  test_names.py  test_orchestrator.py  test_osv.py  test_ranges.py  test_reachability.py  test_report.py  test_state.py  test_verify.py
