[project]
name = "deptrace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "harshithh-18", email = "harshith.gottipati2007@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
deptrace = "deptrace:main"

[build-system]
requires = ["uv_build>=0.11.31,<0.12.0"]
build-backend = "uv_build"
