[project]
name = "deptrace"
version = "0.1.0"
description = "Reachability-based dependency vulnerability triage agent"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.9",
    "packaging>=24.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "diskcache>=5.6",
    "tenacity>=9.0",
]

[project.scripts]
deptrace = "deptrace.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.7", "mypy>=1.13"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"