[project]
name = "deptrace"
version = "0.1.0"
description = "Reachability-based dependency vulnerability triage agent"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.9",
    "packaging>=24.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "diskcache>=5.6",
    "tenacity>=9.0",
]

[project.scripts]
deptrace = "deptrace.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.7", "mypy>=1.13"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Eval fixtures are deliberately malformed input data, not source code: they
# contain syntax errors, dynamic getattr, and odd import orders on purpose.
# Linting them would mean "fixing" the very cases they exist to test.
extend-exclude = ["evals/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true

# diskcache ships no py.typed marker. Scoped to this one module so strict
# mode stays fully in force everywhere else.
[[tool.mypy.overrides]]
module = ["diskcache.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"